src/mcp/test/fixtures/valid/response-enum-proper.fixture.ts
/**
 * @fixture valid
 * @rule response-enum
 * @description Using ResponseStatus enum (allowed)
 * @expectedViolations 0
 */
return response(200, {status: ResponseStatus.Success})
